fix refreshflash bang in dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -32,3 +32,7 @@
   transform: translateY(0);
   opacity: 1;
 }
+
+html {
+  background-color: var(--color-surface-background);
+}
